<resources>
    <string name="app_name">Util-Idades</string>
    <string name="nav_header_title">Práctica Android</string>
    <string name="nav_header_subtitle">Raúl Rueda 2ºDAM</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_calculator">Calculadora</string>
    <string name="menu_converter">Conversor</string>
    <string name="minesweeper">Buscaminas</string>
    <string name="shoppingList">Lista Compra</string>
    <string name="news">Noticias</string>
    <string name="weather">Tiempo</string>

    <string name="error_fetching">No se han podido obtener los datos</string>

    <!-- Home Fragment -->
    <string name="homeText">Bienvenido 👋</string>

    <!-- Calculadora -->
    <string name="calculatorInitialText">0</string>
    <string name="calculator1">1</string>
    <string name="calculator2">2</string>
    <string name="calculator3">3</string>
    <string name="calculator4">4</string>
    <string name="calculator5">5</string>
    <string name="calculator6">6</string>
    <string name="calculator7">7</string>
    <string name="calculator8">8</string>
    <string name="calculator9">9</string>
    <string name="calculatorAddition">+</string>
    <string name="calculatorSubtraction">-</string>
    <string name="calculatorMultiplication">x</string>
    <string name="calculatorDivision">÷</string>
    <string name="calculator0">0</string>
    <string name="calculatorResolve">=</string>
    <string name="calculatorEraseLeft">⌫</string>
    <string name="cleanText">Limpiar</string>

    <!-- Conversor -->
    <string name="fetching">Solicitando datos…</string>
    <string name="currency">Divisa</string>
    <string name="history">Historial</string>
    <string name="share">Compartir</string>
    <string name="convertText">Convertir</string>

    <!-- Buscaminas -->
    <string name="rows">Filas</string>
    <string name="columns">Columnas</string>
    <string name="mines">Minas</string>
    <string name="saveSettings">Guardar Configuración</string>
    <string name="start">Empezar</string>
    <string name="restart">Reiniciar</string>
    <string name="remaining_mines">Minas Restantes: %d</string>
    <string name="time">Tiempo: %02d:%02d</string>
    <string name="loseTitle">Derrota</string>
    <string name="loseText">Has perdido el juego!</string>>
    <string name="winTitle">Victoria</string>
    <string name="winText">Has ganado la partida!</string>

    <!-- Tiempo -->
    <string name="hoursPrediction">Predicción por horas</string>
    <string name="no_location">"No se pudo obtener la ubicación"</string>
    <string name="no_location_permission">Permiso de ubicación denegado</string>
    <string name="network_error">Error de red</string>

    <string name="temperature_format">%.1f °C</string>
    <string name="precipitation_format">Precipitación: %d %%</string>
    <string name="wind_speed_format">Viento: %.1f km/h</string>
    <string name="humidity_format">Humedad: %d %%</string>
    <string name="weather_clear">Despejado</string>
    <string name="weather_partly_cloudy">Parcialmente nublado</string>
    <string name="weather_fog">Niebla</string>
    <string name="weather_drizzle">Llovizna</string>
    <string name="weather_heavy_drizzle">Llovizna en gran volumen</string>
    <string name="weather_rain">Lluvia</string>
    <string name="weather_heavy_rain">Lluvia en gran volumen</string>
    <string name="weather_snow_grains">Granizo</string>
    <string name="weather_hail">Granizo en gran volumen</string>
    <string name="weather_shower">Chubascos</string>
    <string name="weather_snow">Nieve</string>
    <string name="weather_thunderstorm">Tormenta</string>
    <string name="weather_unknown">Desconocido</string>

    <!-- Ajustes -->
    <string name="toast_rows_cols_positive">El número de filas y columnas debe ser mayor que 0</string>
    <string name="toast_rows_cols_max">Máximo de %1$d filas y columnas</string>
    <string name="toast_rows_cols_min">Mínimo de %1$d filas y columnas</string>
    <string name="toast_mines_negative">El número de minas no puede ser menor de</string>
    <string name="toast_mines_less_cells">El número de minas debe ser menor que el número de celdas</string>
    <string name="toast_invalid_numbers">Por favor, ingrese valores numéricos válidos</string>
    <string name="toast_config_saved">Configuración guardada</string>

    <!-- Lista Compra -->
    <string name="bought">Comprado</string>
    <string name="add">Añadir</string>
    <string name="addProduct">Añadir producto…</string>
    <string name="category">Categoría: </string>
    <string name="filterByCategory">Filtrar por categoría</string>
    <string name="no_history">No hay historial para compartir</string>
    <string name="share_history">Compartir historial</string>
    <string name="error_loading_image">Error al cargar la imagen</string>
    <string name="error_saving_image">Error al guardar la imagen</string>
    <string name="insert_name">Debes introducir un nombre para el producto</string>

    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="delete">Eliminar</string>
    <string name="confirm_delete">¿Estás seguro de que quieres eliminar este elemento de la lista?</string>

    <string name="fruitVegetables">Frutas y Verduras</string>
    <string name="meatFish">Carnes y Pescados</string>
    <string name="dairy">Lácteos</string>
    <string name="canned">Enlatados</string>
    <string name="drinks">Bebidas</string>
    <string name="others">Otros</string>

    <string-array name="categories">
        <item>@string/fruitVegetables</item>
        <item>@string/meatFish</item>
        <item>@string/dairy</item>
        <item>@string/canned</item>
        <item>@string/drinks</item>
        <item>@string/others</item>
    </string-array>

    <string name="all_categories">Todas</string>">
    <string-array name="filter_categories">
        <item>@string/all_categories</item>
        <item>@string/fruitVegetables</item>
        <item>@string/meatFish</item>
        <item>@string/dairy</item>
        <item>@string/canned</item>
        <item>@string/drinks</item>
        <item>@string/others</item>
    </string-array>
</resources>