<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/calculator"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_converter"
            android:icon="@drawable/currency"
            android:title="@string/menu_converter" />
        <item
            android:id="@+id/nav_shopping_list"
            android:icon="@drawable/carritoicono"
            android:title="@string/shoppingList" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_minesweeper"
            android:icon="@drawable/minesweeper"
            android:title="@string/minesweeper" />
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/weather"
            android:title="@string/weather" />
    </group>
</menu>