<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.raulrh.practicaandroid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_calculator"
        android:name="com.raulrh.practicaandroid.ui.calculator.CalculatorFragment"
        android:label="@string/menu_calculator"
        tools:layout="@layout/calculator_fragment" />

    <fragment
        android:id="@+id/nav_converter"
        android:name="com.raulrh.practicaandroid.ui.converter.ConverterFragment"
        android:label="@string/menu_converter"
        tools:layout="@layout/converter_fragment" />

    <fragment
        android:id="@+id/nav_shopping_list"
        android:name="com.raulrh.practicaandroid.ui.shoppinglist.ShoppingListFragment"
        android:label="Lista Compra"
        tools:layout="@layout/shoppinglist_fragment" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.raulrh.practicaandroid.ui.news.NewsFragment"
        android:label="Noticias"
        tools:layout="@layout/news_fragment" />

    <fragment
        android:id="@+id/nav_minesweeper"
        android:name="com.raulrh.practicaandroid.ui.minesweeper.MinesweeperFragment"
        android:label="Buscaminas"
        tools:layout="@layout/minesweeper_fragment" />

</navigation>